Apply tiny polish to QuarkusTestExtension